# agent-project

./: .dockerignore  .env.agent.example  .env.docker.example  .env.example  .gitignore  Dockerfile.agent  Dockerfile.frontend  Dockerfile.frontend.dev  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  test_user_prompt.md
agent/: __init__.py  flag_log_write.py  intent.py  loop.py  main.py  mcp_client.py  prompt_fragments.py  prompts.py  python_exec.py  routes.py  tools.py  trace.py
docs/: AUTH0_SETUP.md  AUTH_FLOW.md  BUG_PUBLISH_DATASOURCE_ENOENT.md  MCP_APPS_DIAGNOSIS.md  MCP_APPS_REQUIREMENTS.md  MCP_SERVER_REQUIREMENTS.md  REASONING_LOOP.md
evaluation/: README.md  __init__.py  conftest.py  history.py  migrate.py  persistence.py  report.py  run_eval.py  run_models.sh  runner.py
evaluation/cases/: ambiguity.yaml  conversation_stress.yaml  cross_workflow.yaml  discovery.yaml  download_inspect.yaml  edge_cases.yaml  error_recovery.yaml  multi_step.yaml  multi_turn.yaml  publish.yaml  python_advanced.yaml  query_advanced.yaml  query_basic.yaml  update_datasource.yaml
evaluation/evaluators/: __init__.py  answer_quality.py  efficiency.py  query_correctness.py  tool_sequence.py
evaluation/mocks/: __init__.py  mock_mcp_pool.py
evaluation/queries/: failure_details.sql  in_progress_pass_rate.sql  latest_per_model.sql  wtq_failure_details.sql  wtq_in_progress_pass_rate.sql
evaluation/wtq/: __init__.py  (+4 more)
scripts/: bootstrap_flag_log.py  diagnose_query.py
src/: middleware.ts  proxy.ts
tests/: test_update_datasource_data.py
(+39 files in other folders)
