[project]
name = "agent-suite"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "openai>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "tableauhyperapi>=0.0.24457",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
bootstrap = ["tableauhyperapi", "tableauserverclient"]

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]
